week 5 - notes update

--- a/5index-2.html
+++ b/5index-2.html
@@ -16,7 +16,7 @@
     <div id="theDiv">Here is my Div</div>
 
     <input type= "text" id="addAnItem" value="add">
-    <ul>
+    <ul id="theList">
         <li>Clean House</li>
         <li>Do Homework</li>
     </ul>
